--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "mercadopago": "^2.0.15",
