--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "mercadopago": "^2.0.15",
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "gsap": "^3.12.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
